# trace-engine

./: .gitignore  LICENSE  README.md  makefile
tecore/: .gitignore  CMakeLists.txt  build-win64.py  build.py  makefile
tecore/src/: Win32Application.cpp  Win32Application.h  stdafx.h
ted3d12/: CMakeLists.txt
ted3d12/include/te/: d3d12global.h
ted3d12/include/te/d3d12/: commandlist.h  commandqueue.h  d3d12renderingdevice.h  d3d12renderingengine.h  device.h  dxh.h  gfxsystem.h  global.h  renderingdevice.h  renderingengine.h  vertexbuffer.h  window.h
ted3d12/src/: engine.cpp
ted3d12/src/d3d12/: commandlist.cpp  commandqueue.cpp  d3d12renderingdevice.cpp  d3d12renderingengine.cpp  device.cpp  other.cpp  renderingdevice.cpp  renderingengine.cpp  system.cpp  vertexbuffer.cpp  window.cpp
teditor/: CMakeLists.txt
teditor/src/: main.cpp  window.cpp  window.h
tegl/: CMakeLists.txt
tegl/include/te/gl/: global.h  renderingdevice.h  renderingengine.h
tegl/src/: engine.cpp
tegl/src/gl/: renderingdevice.cpp  renderingengine.cpp
tengine/: CMakeLists.txt
tengine/include/te/: application.h  engine.h  types.h
tengine/src/: application.cpp  engine.cpp
tewin32/: CMakeLists.txt  build-win64.py
tewin32/include/te/win32/: application.h  global.h  window.h
tewin32/src/: engine.cpp
tewin32/src/win32/: application.cpp  window.cpp
tewin64/: CMakeLists.txt
tewin64/include/te/win32/: win32application.h  win32window.h
tewin64/src/: engine.cpp
tewin64/src/win32/: win32application.cpp  win32window.cpp
